[package]
name = "aocfetcher"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exitcode = "1.1.2"
reqwest = { version = "0.11.18", features = ["blocking", "cookies"] }
scraper = "0.17.1"
toml = "0.7.6"

[[bin]]
name = "fetch"
path = "src/main.rs"
